# EmbyStream

./: Cargo.toml  README.md
.github/workflows/: build-docker-manual.yaml  build-docker.yaml  build-release.yaml
docs/: cli.md  configuration-reference.md
src/: app.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/emby/response/: playback_info.rs
src/cli_wizard/: emit.rs  template_payload.rs  wizard.rs
src/client/: mod.rs
src/client/emby/: playback_info_service.rs
src/config/: config.toml.template  types.rs
src/config/frontend/: types.rs
src/core/frontend/: service.rs
src/gateway/: debug_paths.rs  mod.rs  reverse_proxy.rs
src/web/drafts/: mod.rs
web/src/api/: types.ts
web/src/locales/: en.json  zh-CN.json  zh-TW.json
web/src/views/: WizardView.vue
